# guinea-worm

./: README.md  initializeModel.py  pyproject.toml
guinea_worm/: constants.py  model.py  model_wrapper.py  population.py  tools.py  worms.py
guinea_worm/model/: intervention.py  model.py  population.py  worms.py
