[tool.poetry]
name = "guinea-worm"
version = "0.1.0"
description = ""
authors = ["NTD-Modelling-Consortium <todo>"]
readme = "README.md"
packages = [{include = "guinea_worm"}]

[tool.poetry.dependencies]
python = ">=3.10"
tqdm = "^4.66.5"
numpy = "^2.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
autoflake = "^2.3.1"
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
